--- a/gradient.css
+++ b/gradient.css
@@ -27,5 +27,5 @@
     background-image: conic-gradient(yellow 45deg,blue 20deg,orange 23deg);
     background-image: repeating-conic-gradient(at 45% 180%, blue,orange,aqua);
     background-image: repeating-conic-gradient(from 100deg,red,green);
-    border-radius: 50%;
+    border-radius: 45em;
 }
